Two lists now, but sorting needs doing

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -20,3 +20,11 @@
 	margin-bottom: 15px;
 }
 
+.listSection {
+	display: inline-block;
+	margin-left: 30px;
+}
+
+/*#sourceList .ui-sortable-placeholder {
+	visibility: hidden;
+}*/
